<resources>
    <string name="app_name">RFID实物管理系统</string>
    <string name="action_settings">设置</string>
    <string name="media_uploading">正在上传多媒体请稍后，若网络不良等待会比较长</string>
    <string name="belongunit">所属单位:</string>
    <string name="department">所属部门:</string>
    <string name="personnal">责任人员:</string>
    <string name="state">任务状态:</string>
    <string name="starttime">任务分配时间:</string>
    <string name="endtime">结束时间:</string>
    <string name="taskid">任务ID:</string>
    <string name="mytasks">任务：我的任务</string>
    <string name="selectdata">查询</string>
    <string name="add_exception_device">添加异常设备</string>
    <string name="tag_count">标签数量：</string>
    <string name="equipment_name">设备名称:</string>
    <string name="ems_chose">请选择...</string>
    <string name="equipment_number">设备编号:</string>
    <string name="equipment_class">设备大类:</string>
    <string name="equipment_class1">设备大类</string>
    <string name="equipment_type">设备类型:</string>
    <string name="equipment_state">设备状态:</string>
    <string name="belongunit2">所属单位:</string>
    <string name="voltage_rank">电压等级:</string>
    <string name="voltage_rank1">电压等级</string>
    <string name="property_number">资产编号:</string>
    <string name="company_number">公司编号:</string>
    <string name="project_name">项目名称:</string>
    <string name="count">数量:</string>
    <string name="unit">单位:</string>
    <string name="measurement_unit">计量单位:</string>
    <string name="model">型号:</string>
    <string name="operator">操作员</string>
    <string name="manufacturer">制造商:</string>
    <string name="saveaddress">存放位置:</string>
    <string name="saveaddress1">存放位置</string>
    <string name="storekeeper">保管人:</string>
    <string name="storekeeper1">保管人</string>
    <string name="storekeepdepartment">保管部门:</string>
    <string name="wbselement">WBS元素:</string>
    <string name="before_function">上一级功能位置:</string>
    <string name="function_desc">功能位置描述:</string>
    <string name="function_desc1">功能位置描述</string>
    <string name="use_time">投运日期:</string>
    <string name="reject_time">报废日期:</string>
    <string name="taskinformation">任务基本信息:</string>
    <string name="propertyinformation">资产信息:</string>
    <string name="rejectinformation">报废信息:</string>
    <string name="differencetaskinformation">异动信息:</string>
    <string name="rejectattribute2">异动属性:</string>
    <string name="reject_before2">异动前:</string>
    <string name="reject_next2">异动后:</string>
    <string name="rejectlist">序号</string>
    <string name="rejectnumber">设备编号</string>
    <string name="rejectequipname">设备名称</string>
    <string name="rejectassetsnumber">资产号</string>
    <string name="rejectassetdesc">资产描述</string>
    <string name="rejectassetdesc1">资产描述:</string>
    <string name="rejectbelong">所属单位</string>
    <string name="error_type">异常类型:</string>
    <string name="error_type1">异常类型</string>
    <string name="rejectdepartment">保管部门</string>
    <string name="rejectdepartment1">保管部门:</string>
    <string name="rejectkeeper">保管名</string>
    <string name="work_center">工作中心:</string>
    <string name="stock_type">盘点状态</string>
    <string name="equipment_name2">设备名称</string>
    <string name="equipment_number2">设备编号</string>
    <string name="property_name2">资产名称</string>
    <string name="belongunit22">所属单位</string>
    <string name="storekeepdepartment2">保管部门</string>
    <string name="count2">数量</string>
    <string name="result">盘点结果</string>
    <string name="information2">信息</string>
    <string name="checkproject2">检查项目</string>
    <string name="checkprojectcontent">检查内容</string>
    <string name="scenenotes2">现场记录</string>
    <string name="stockname">盘点明细</string>
    <string name="stocknamebotton">异常列表</string>
    <string name="remenber">记住账号</string>
    <string name="floagcomfirm">标签确认</string>
    <string name="floagnumber">标签编号：</string>
    <string name="scan">扫描</string>
    <string name="ok">完成</string>
    <string name="cancel0">取消</string>
    <string name="sure">确定</string>
    <string name="write">写入</string>
    <string name="floagnum">资产编码：</string>
    <string name="floagok">确认标签</string>
    <string name="floagscan">扫描标签</string>
    <string name="login_success">数据更新...</string>
    <string name="login_submit">用户登录</string>
    <string name="replace">账号重置</string>
    <string name="replace2">重置</string>
    <string name="login_regist">入网注册</string>
    <string name="unlogin_regist">退网注销</string>
    <string name="systemcode">获取编码</string>
    <string name="taskfinish">任务完成</string>
    <string name="remarks">备注:</string>
    <string name="finishstatus">完成情况：</string>
    <string name="tool_assets_no">资产编号</string>
    <string name="tool_company_no">公司代码</string>
    <string name="tool_tagid">标签编号</string>
    <string name="tool_cost_center">成本中心</string>
    <string name="tool_cost_center1">成本中心:</string>
    <string name="tool_date_time">资产资本化日期</string>
    <string name="tool_equi_no">设备编号</string>
    <string name="tool_equi_type">设备类型</string>
    <string name="tool_factory_no">制造商</string>
    <string name="tool_equi_fn_location">设备功能位置</string>
    <string name="confirm">确认</string>
    <string name="del_confirm">确认删除</string>
    <string name="tool_equi_select">设备查询</string>
    <string name="tool_share_data">数据同步</string>
    <string name="tool_down_data">下载数据</string>
    <string name="tool_input_data">导入数据</string>
    <string name="tool_output_data">导出数据</string>
    <string name="tool_get_operater">获取操作人员</string>
    <string name="tool_tag_do">标签操作</string>
    <string name="rfid_set">RFID射频设置</string>
    <string name="tool_out_net">退网注销</string>
    <string name="tool_clear_data">清除数据</string>
    <string name="auto_stock">自动盘点</string>
    <string name="scan_ing">正在扫描，请稍等...</string>
    <string name="adddiferents">添加异常项</string>
    <string name="diferentsproject">异常项目</string>
    <string name="content">内容</string>
    <string name="scancontent">现场情况</string>
    <string name="change">修改</string>
    <string name="delete">删除</string>
    <string name="devid">终端ID：</string>
    <string name="username">用户名：</string>
    <string name="userpwd">密码：</string>
    <string name="testednum">验证码：</string>
    <string name="setregist">注册</string>
    <string name="set">设置</string>
    <string name="serveip">服务器ip：</string>
    <string name="serveport">端口：</string>
    <string name="serveportreg">注册端口：</string>
    <string name="servecontent">主站内容：</string>
    <string name="inittag">初始化标签</string>
    <string name="tagnumber">标签编码</string>
    <string name="unfinishtask">待办任务</string>
    <string name="finishtask">已办任务</string>
    <string name="mytask">我的任务</string>
    <string name="newtask">资产贴标</string>
    <string name="floagtask">标签更换</string>
    <string name="difftask">资产异动</string>
    <string name="stocktask">资产盘点</string>
    <string name="reporttask">资产报废</string>
    <string name="sub_tool">辅助工具</string>
    <string name="devicehistory">设备历史记录</string>
    <string name="init_data">正在加载数据...</string>
    <string name="assect_no">资产编号：</string>
    <string name="report">写入</string>
    <string name="insert">导入</string>
    <string name="data">条任务,正在更新标签表,请等待...</string>
    <string name="data2">条任务</string>
    <string name="time_out">链接超时，请联系管理员</string>
    <string name="lostssl">SSL证书错误，请联系管理员</string>
    <string name="null_username_or_pwd">用户名密码不能为空</string>
    <string name="null_username_or_pwd_sit">用户名、密码、验证码不能为空</string>
    <string name="null_ip_port">ip和端口不能为空</string>
    <string name="unregist">终端未注册请联系管理员</string>
    <string name="registing">正在注册、并下载证书，请等待</string>
    <string name="regist_finish">入网注册成功,正在获取其他基础数据请等待...</string>
    <string name="login_ing">正在登录，请等待</string>
    <string name="null_code_table">系统编码为空请先获取系统编码或联系管理人员</string>
    <string name="fail_username">用户记录失败</string>
    <string name="reading_tag">正在扫描标签，请勿移动终端</string>
    <string name="writeing_tag">正在写入标签，可能需要几秒的时间，在此期间请勿移动终端，否则可能写入失败</string>
    <string name="write_fail">写入失败，请先对准正确的标签后再进行该项操作</string>
    <string name="write_succeed">写入成功</string>
    <string name="init_tag">正在初始化标签，可能需要几秒的时间，在此期间请勿移动终端，否则可能写入失败</string>
    <string name="init_succeed">初始化成功</string>
    <string name="init_fail">初始化失败</string>
    <string name="deal_err">请正确操作标签</string>
    <string name="outside_tag">此标签是未使用过的标签</string>
    <string name="task_err">任务出错，请联系管理员</string>
    <string name="no_this_tag">此标签不是该任务所要操作的标签，请核对。</string>
    <string name="no_check_item">没有盘点项目。</string>
    <string name="place_check_item">正确的标签，请盘点</string>
    <string name="comple_tag_err">处理出错，请从新处理</string>
    <string name="save_data">正在保存数据...</string>
    <string name="save_data_err">保存出错。请重新处理</string>
    <string name="task_deal_success">任务处理成功</string>
    <string name="no_read_tag">请先进行【标签扫描】操作</string>
    <string name="no_read_or_pic">请先进行【标签扫描】操作，若无法扫描请进行【拍照】操作留档</string>
    <string name="no_write_tag">请先进行【标签写入】操作</string>
    <string name="no_taskstatus_tag">请选择【完成情况】</string>
    <string name="unreceive_tag">的标签</string>
    <string name="save">保存</string>
    <string name="rfid_scan">标签扫描</string>
    <string name="addDevice">新增异常设备</string>
    <string name="editDevice">修改异常设备</string>
    <string name="viewDevice">查看异常设备</string>
    <string name="no_report">请先进行【标签写入】操作</string>
    <string name="reporting">正在写入标签，可能需要几秒的时间，在此期间请勿移动终端，否则可能写入失败</string>
    <string name="report_success">成功</string>
    <string name="report_fail">失败,请先扫描正确的标签</string>
    <string name="stock_finish">此资产已经盘点完成</string>
    <string name="all_stock_finish">已盘点完所有可盘点项目</string>
    <string name="null_stock_item">盘点项不能为空</string>
    <string name="no_stock">异常项为空</string>
    <string name="un_check">与现场不匹配,是否完成盘点</string>
    <string name="http_result_null">网络连接失败，请确认配置或与系统管理员联系</string>
    <string name="submit_fail">任务提交不成功,请重新提交</string>
    <string name="finish">完成</string>
    <string name="dealwitherr">任务处理出错，请从新处理</string>
    <string name="updata">更新数据 ...</string>
    <string name="updata_success">更新完成</string>
    <string name="ip_port_null">ip地址为空请在登录界面设置ip地址</string>
    <string name="download_data">正在下载数据，请等待...</string>
    <string name="search_file">正在搜索文件，请等待...</string>
    <string name="insert_data">正在导入数据</string>
    <string name="insert_data_success">数据导入完成</string>
    <string name="insert_data_fail">数据导入失败</string>
    <string name="usb_null">找不到设备，请检查设备是否正常连接</string>
    <string name="outputdata">正在导出数据,请等待...</string>
    <string name="senddata">正在传输数据,请等待...</string>
    <string name="outputdata_success">数据导出完成，共导出</string>
    <string name="outputdata_success2">条数据</string>
    <string name="outputdata_fail">数据导出失败</string>
    <string name="get_operator_data">正在下载数据...</string>
    <string name="clear_data">正在清空任务</string>
    <string name="clear_data_success">清空任务完成</string>
    <string name="clear_data_fail">清空任务失败</string>
    <string name="unregister">正在注销</string>
    <string name="unregister_success">注销成功</string>
    <string name="unregister_fail">注销失败</string>
    <string name="ssl_file_zip_err">证书处理失败，请从新注册</string>
    <string name="Logo_user_name">当前用户：</string>
    <string name="Logo_user_depart">用户部门：</string>
    <string name="preview">预览</string>
    <string name="media_del">删除</string>
    <string name="tag_no_content">标签编号</string>
    <string name="tag_type_content">标签类型</string>
    <string name="tag_dealwidth_content">操作</string>
    <string name="dialog_title">扫描结果</string>
    <string name="null_tag_list">标签列表为空，请添加标签</string>
    <string name="history_attribute">异动属性</string>
    <string name="history_pro">异动前</string>
    <string name="history_next">异动后</string>
    <string name="history_time">异动时间</string>
    <string name="error_msg">错误提示</string>
    <string name="tip_msg">提示</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="barcode">条码扫描</string>
    <string name="management_setdata">参数设置</string>
</resources>